# dewpoint

./: .gitignore  LICENSE  README  dewpoint.cabal  weathersim.cabal
app/: CommandLineOptions.hs  LoadGrid.hs  Main.hs  MeteoStation.hs  Plot.hs
scripts/: import_data.py  plot_data.py
src/DewPoint/: Advection.hs  Geo.hs  Grid.hs  Physics.hs  Simulation.hs
test/: AdvectionTest.hs  GridTest.hs  Spec.hs
