name:                dewpoint
version:             0.1.0.0
synopsis:            Simple weather simulation
description:         Please see README.md
--homepage:            https://gitlab.com/Mikov/dewpoint
license:             BSD3
license-file:        LICENSE
author:              Nikolay Mikov
maintainer:          nik.mikov@gmail.com
copyright:           2016 Nikolay Mikov
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DewPoint.Grid
                     , DewPoint.Geo
                     , DewPoint.Physics
                     , DewPoint.Simulation
  build-depends:       base >= 4.7 && < 5
                     , repa >= 3.2
                     , containers
                     , time
  ghc-options:         -Wall -fno-ignore-asserts
  default-language:    Haskell2010

executable dewpoint-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       CommandLineOptions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall  -funbox-strict-fields
  build-depends:       base
                     , dewpoint
                     , optparse-applicative
                     , time >= 1.5
                     , split
                     , repa
                     , containers
                     , filepath
  default-language:    Haskell2010

test-suite dewpoint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dewpoint
                     , repa
                     , tasty
                     , tasty-hunit
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/Mikov/dewpoint
