name:                dewpoint
version:             0.1.0.0
synopsis:            Simple weather simulation
description:         Please see README.md
--homepage:            https://gitlab.com/Mikov/dewpoint
license:             BSD3
license-file:        LICENSE
author:              Nikolay Mikov
maintainer:          nik.mikov@gmail.com
copyright:           2016 Nikolay Mikov
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DewPoint.Grid
                     , DewPoint.Geo
                     , DewPoint.Physics
                     , DewPoint.Simulation
                     , DewPoint.Advection
  build-depends:       base >= 4.7 && < 5
                     , repa >= 3.2
                     , repa-algorithms
                     , containers
                     , vector
                     , time
  ghc-options:         -Wall -fno-ignore-asserts -O
  default-language:    Haskell2010

executable dewpoint-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       CommandLineOptions Plot LoadGrid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O
  build-depends:       base
                     , dewpoint
                     , optparse-applicative
                     , aeson
                     , bytestring
                     , time >= 1.5
                     , repa
                     , containers
                     , filepath
                     , text
  default-language:    Haskell2010

test-suite dewpoint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GridTest AdvectionTest
  build-depends:       base
                     , dewpoint
                     , repa
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/Mikov/dewpoint
