name:                weathersim
version:             0.1.0.0
synopsis:            Simple weather simulation
description:         Please see README.md
homepage:            https://gitlab.com/Mikov/weathersim
license:             BSD3
license-file:        LICENSE
author:              Nikolay Mikov
maintainer:          nik.mikov@gmail.com
copyright:           2016 Nikolay Mikov
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable weathersim
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , weathersim
  default-language:    Haskell2010

test-suite weathersim-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , weathersim
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/Mikov/weathersim
